--- a/man/ugrep-indexer.1
+++ b/man/ugrep-indexer.1
@@ -1,18 +1,32 @@
 .TH UGREP-INDEXER "1" "December 05, 2023" "ugrep-indexer 0.9.2" "User Commands"
 .SH NAME
-\fBugrep-indexer\fR -- file indexer for accelerated ugrep search
+\fBugrep-indexer\fR -- file indexer to accelerate recursive searching
 .SH SYNOPSIS
-.B ugrep-indexer [\fB-0\fR|...|\fB-9\fR] [\fB-.\fR] [\fB-c\fR|\fB-d\fR|\fB-f\fR] [\fB-I\fR] [\fB-q\fR] [\fB-S\fR] [\fB-s\fR] [\fB-X\fR] [\fB-z\fR]
+.B ugrep-indexer [\fIPATH\fR] [\fB-0\fR...\fB9\fR] [\fB-c\fR|\fB-d\fR|\fB-f\fR] [\fB-I\fR] [\fB-q\fR] [\fB-S\fR] [\fB-s\fR] [\fB-X\fR] [\fB-z\fR]
 .SH DESCRIPTION
 The \fBugrep-indexer\fR utility recursively indexes files to accelerate ugrep
 recursive searches with \fBugrep\fR option \fB--index\fR.
 .PP
+An optional \fIPATH\fR may be specified to the root of the directory tree to
+index.  The default is to recursively index the working directory tree.
+.PP
+Indexes are incrementally updated unless option \fB-f\fR or \fB--force\fR is
+specified.
+.PP
+When option \fB-I\fR or \fB--ignore-binary\fR is specified, binary files are
+ignored and not indexed.  Searching with `ugrep --index' still searches binary
+files unless ugrep option \fB-I\fR or \fB--ignore-binary\fR is specified also.
+.PP
+Archives and compressed files are incrementally indexed only when option
+\fB-z\fR or \fB--decompress\fR is specified.  Otherwise, archives and
+compressed files are indexed as binary files, or are ignored with option
+\fB-I\fR or \fB--ignore-binary\fR.
+.PP
+To create an indexing log file, specify option \fB-v\fR or \fB--verbose\fR and
+redirect standard output to a log file.  All messages are sent to standard
+output.
+.PP
 The following options are available:
-Usage:
-ugrep\-indexer [\fB\-0\fR|...|\fB\-9\fR] [\fB\-.\fR] [\fB\-c\fR|\fB\-d\fR|\fB\-f\fR] [\fB\-I\fR] [\fB\-q\fR] [\fB\-S\fR] [\fB\-s\fR] [\fB\-X\fR] [\fB\-z\fR] [\fIPATH\fR]
-.TP
-PATH    Optional pathname to the root of the directory tree to index.  The
-default is to recursively index the working directory tree.
 .TP
 \fB\-0\fR, \fB\-1\fR, \fB\-2\fR, \fB\-3\fR, ..., \fB\-9\fR, \fB\-\-accuracy\fR=\fIDIGIT\fR
 Specifies indexing accuracy.  A low accuracy reduces the indexing
@@ -84,40 +98,12 @@ effectively ignored.  Specify \fB\-\-zmax\fR=2 to index compressed files
 and archives stored in cpio, pax, tar and zip archives.  NUM may
 range from 1 to 99 for up to 99 decompression and de\-archiving
 steps.  Increasing NUM values gradually degrades performance.
-.TP
-Indexes are incrementally updated unless option \fB\-f\fR or \fB\-\-force\fR is specified.
-.TP
-
-.TP
-When option \fB\-I\fR or \fB\-\-ignore\-binary\fR is specified, binary files are ignored
-.TP
-and not indexed.  Searching with ugrep \fB\-\-index\fR still searches binary files
-.TP
-unless ugrep option \fB\-I\fR or \fB\-\-ignore\-binary\fR is specified also.
-.TP
-
-.TP
-Archives and compressed files are incrementally indexed only when option \fB\-z\fR
-.TP
-or \fB\-\-decompress\fR is specified.  Otherwise, archives and compressed files are
-.TP
-indexed as binary files, or are ignored with option \fB\-I\fR or \fB\-\-ignore\-binary\fR.
-.TP
-
-.TP
-To create an indexing log file, specify option \fB\-v\fR or \fB\-\-verbose\fR and redirect
-.TP
-standard output to a log file.  All messages are sent to standard output.
-.TP
-
-.TP
-
 .SH "EXIT STATUS"
 The \fBugrep-indexer\fR utility exits with one of the following values:
 .IP 0
 Indexes are up to date.
 .IP 1
-Indexing check with option \fB-c\fR detected missing and outdated index files.
+Indexing check \fB-c\fR detected missing and outdated index files.
 .SH EXAMPLES
 Recursively and incrementally index all non-binary files showing progress:
 .IP
