fix typo and improve raw indexing speed

--- a/man/ugrep-indexer.1
+++ b/man/ugrep-indexer.1
@@ -1,4 +1,4 @@
-.TH UGREP-INDEXER "1" "December 06, 2023" "ugrep-indexer 0.9.3" "User Commands"
+.TH UGREP-INDEXER "1" "December 07, 2023" "ugrep-indexer 0.9.3" "User Commands"
 .SH NAME
 \fBugrep-indexer\fR -- file indexer to accelerate recursive searching
 .SH SYNOPSIS
@@ -129,12 +129,12 @@ $ ugrep-indexer -f -z -I -v -S -X
 Same, but decrease index file storage to a minimum by decreasing indexing
 accuracy from 5 (default) to 0:
 .IP
-$ ugrep-indexer -f -0 -z -I -v -X
+$ ugrep-indexer -f -0 -z -I -v -S -X
 .PP
 Increase search performance by increasing the indexing accuracy from 5
 (default) to 7 at a cost of larger index files:
 .IP
-$ ugrep-indexer -f7zIvX
+$ ugrep-indexer -f7zIvSX
 .PP
 Recursively delete all hidden ._UG#_Store index files to restore the directory
 tree to non-indexed:
